--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
               <div class="stat-row">
                 <label>Constellation Points</label>
                 <input type="number" id="c-points" min="0" />
+
+                <div id="c-points-info" class="cp-breakdown"></div>
               </div>
 
               <div class="campaign-box">
@@ -115,8 +117,10 @@
 
         <ul class="instruction-list">
           <li class="warning">
-            <strong>⚠️ Backup your save file!</strong> Always make a copy of
-            your <code>.json</code> file before editing
+            <strong>⚠️ Backup your save file!</strong><br />
+            Always make a copy of your <code>.json</code> file before editing
+            <br />
+            <strong>Use only your own save file!</strong>
           </li>
           <li>
             Click the <strong>Copy Path</strong> button (in the upload box) to
@@ -127,7 +131,9 @@
           </li>
           <li>Paste that path into your File Explorer address bar</li>
           <li>
-            Drag and drop <strong>PlayerSave0.json (or another save file)</strong> into the editor
+            Drag and drop
+            <strong>PlayerSave0.json (or another save file)</strong> into the
+            editor
           </li>
           <li>Modify your resources or complete your cursed shrines</li>
           <li>Click <strong>"Download Modified Save"</strong></li>
